--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -79,6 +79,7 @@
       float: left;
       height: var(--navbar-height);
       padding-left: 18px;
+      cursor: pointer;
     }
 
     .navbar-icon:first-child {
@@ -92,17 +93,17 @@
       .navbar-dropdown {
         display: none;
         position: absolute;
+        top: 50px;
+        left: -30px;
+        padding: 5px 15px;
+        background: var(--primary-color);
+        border-radius: 6px;
+        color: white;
+        font-size: 15px;
       }
 
       .navbar-icon:hover .navbar-dropdown {
-        position: absolute;
-        display: flex;
-        justify-content: space-between;
-        top: var(--navbar-height);
-        right: 0px;
-        width: 100px;
-        border: 1px solid gray;
-        cursor: pointer;
+        display: block;
       }
 
         .navbar-dropdown li {
